Entrada, Leitura, Comando e Argumentos OK

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(UaB_EstruturasDAF_EFolioB)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(UaB_EstruturasDAF_EFolioB main.cpp)
+add_executable(UaB_EstruturasDAF_EFolioB main-minh.cpp minh.cpp minh.h)
